--- a/random-colors/index.html
+++ b/random-colors/index.html
@@ -4,46 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+
+    
 </head>
 <body>
-    <div id="colors"> </div>
-    <div id="bgc"></div>
-    <button id="btn"> clique </button>
-<script>
-let colors = window.document.querySelector('#colors')
-let btn = window.document.querySelector('#btn')
-let bg = window.document.querySelector('.bg')
 
-
-btn.addEventListener('click', function(){
-
-    let cores = ['blue','red','yellow','green','purple','cyan']
-
-    let arr = cores [Math.floor(Math.random()* cores.length)]
-
-   
-
-
-
-/*
-if(arr == 'blue'){
-    colors.innerHTML = ' blue'
-}else if (arr == 'red'){
-    colors.innerHTML = ' red'
-}else if (arr == 'yellow'){
-    colors.innerHTML = 'yellow'
-}else if (arr == 'green'){ 
-    colors.innerHTML = ' green'
-}*/ 
-});
-
-
-
-
-
-
-
-
-</script>
+    <div id="container">
+        
+        <div id="colors"> </div>
+        <div id="bgc"></div>
+        <button id="btn"> clique </button>
+    </div>
+<script src="index.js"></script>
 </body>
 </html>
